--- a/templates/filmy.html
+++ b/templates/filmy.html
@@ -9,5 +9,10 @@
 </head>
 <body>
 <h2>Tu będą moje filmy</h2>
+
+    {% for film in filmy %}
+        <p>{{ film.tytul }}<p>
+    {%endfor%}
+
 </body>
 </html>
