--- a/templates/filmy.html
+++ b/templates/filmy.html
@@ -8,11 +8,18 @@
     <title>Document</title>
 </head>
 <body>
-<h2>Tu będą moje filmy</h2>
+
+    {% if filmy|length == 0 %}
+        <h2>Brak filmów w bazie</h2>
+    {%else%}
+        <h2>Ilość filmów w BD: {{filmy|length}}</h2>
 
     {% for film in filmy %}
-        <p>{{ film.tytul }}<p>
+            <p>{{ film }}<p>
     {%endfor%}
+    {% endif %}
+
+
 
 </body>
 </html>
