--- a/templates/filmy.html
+++ b/templates/filmy.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!docktype html>
 <html lang="en">
 <head>
@@ -6,6 +7,7 @@
         content="width=device-width, user-scalable=no , initial-scale-1.0, maximum-scale=1.0, minimum-scale-1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="{%static 'nowy.css'%}">
 </head>
 <body>
 
@@ -18,8 +20,6 @@
             <p>{{ film }}<p>
     {%endfor%}
     {% endif %}
-
-
 
 </body>
 </html>
