--- a/templates/filmy.html
+++ b/templates/filmy.html
@@ -17,7 +17,8 @@
         <h2>Ilość filmów w BD: {{filmy|length}}</h2>
 
     {% for film in filmy %}
-            <p>{{ film }}<p>
+            <h3>{{ film }}</h3>
+            <i>{{film.opis}}</i>
     {%endfor%}
     {% endif %}
 
