--- a/templates/filmy.html
+++ b/templates/filmy.html
@@ -7,7 +7,7 @@
         content="width=device-width, user-scalable=no , initial-scale-1.0, maximum-scale=1.0, minimum-scale-1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="{%static 'nowy.css'%}">
+    <link rel="stylesheet" href="{%static 'moj.css'%}">
 </head>
 <body>
 
@@ -18,7 +18,7 @@
 
     {% for film in filmy %}
             <h3>{{ film }}</h3>
-            <i>{{film.opis}}</i>
+            <p>{{film.opis}}</p>
     {%endfor%}
     {% endif %}
 
