--- a/templates/potwierdz.html
+++ b/templates/potwierdz.html
@@ -13,6 +13,7 @@
         {% csrf_token %}
         <button type="submit">Usuń</button>
     </form>
+    <a href="{% url 'wszystkie_filmy' %} ">Cofnij</a>
 
 </body>
 </html>
