--- a/templates/filmy.html
+++ b/templates/filmy.html
@@ -10,6 +10,13 @@
     <link rel="stylesheet" href="{%static 'moj.css'%}">
 </head>
 <body>
+    {% if user.is_authenticated%}
+        Witaj {{ user.username}}<br>
+        <a href="{% url 'logout' %} ">Logout</a>
+    {% else %}
+        <a href="{% url 'login' %} ">Login</a>
+    {% endif %}
+    <hr>
     <a href="{% url 'nowy_film' %} ">Nowy</a>
     {% if filmy|length == 0 %}
         <h2>Brak filmów w bazie</h2>
