--- a/templates/glowny.html
+++ b/templates/glowny.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/c16c64f070.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{% static 'nowy.css' %}">
+    <link rel="stylesheet" href="{% static 'moj.css' %}">
     <title>{% block tytul %} {%endblock%}</title>
 </head>
 <body>
