--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -10,7 +10,7 @@
             <form method="post">
                 {% csrf_token%}
                 {{form | bootstrap}}
-                <button type="submit"class="btn btn-primary">Zaloguj <i class="fa-solid fa-right-to-bracket"></i></button>
+                <button type="submit"class="btn btn-success">Zaloguj <i class="fa-solid fa-right-to-bracket"></i></button>
             </form>
         </div>
     </div>
