--- a/filmyweb/static/nowy.css
+++ b/filmyweb/static/nowy.css
@@ -4,3 +4,16 @@ body{
 h2{
   color:blue;
 }
+.film-plakat{
+    width: 150px;
+    float: left;
+}
+.film-icon{
+    font-size :1.6rem;
+}
+.opis{
+    margin-left:15px;
+}
+.card{
+    width=36rem;
+}
