--- a/templates/filmy.html
+++ b/templates/filmy.html
@@ -20,20 +20,21 @@
 <!--        <h2>Ilość filmów w BD: {{filmy|length}}</h2>-->
 
     {% for film in filmy %}
-            <div class="card" style="width: 27rem;">
+            <div class="card" style="width:36rem;">
               <div class="card-body">
+                  <img src="/media/{{film.plakat}}" class="film-plakat">
                   <div class="row">
                       <div class="col-9">
                           <h5 class="card-title">{{ film }}</h5>
                       </div>
 
                     <div class="col-3">
-                        <a href="{% url 'edytuj_film'  film.id %} "><i class="fa-solid fa-2x fa-pen"></i></a>
-                        <a href="{% url 'usun_film'  film.id %} "><i class="fa-solid fa-2x fa-trash"></i></a>
+                        <a href="{% url 'edytuj_film'  film.id %} "><i class="fa-solid fa-2x fa-pen film-icon"></i></a>
+                        <a href="{% url 'usun_film'  film.id %} "><i class="fa-solid fa-2x fa-trash film-icon"></i></a>
                     </div>
                   </div>
                   <div class="row">
-                      <p class="card-text">{{film.opis}}</p>
+                      <p class="card-text opis">{{film.opis}}</p>
                   </div>
               </div>
             </div>
