--- a/templates/nowy_film.html
+++ b/templates/nowy_film.html
@@ -10,9 +10,12 @@
                 {% else %}
                     <h5 class="card-title">Edytuj film </h5>
                 {% endif %}
+
+
             <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{form | bootstrap}}
+        {{form_dodatkowe | bootstrap}}
                 {%if nowy%}
                 <br><button type="submit"class="btn btn-primary">Nowy film</button>
                 {% else %}
