--- a/templates/nowy_film.html
+++ b/templates/nowy_film.html
@@ -3,7 +3,7 @@
 {%block tytul%} Film form {% endblock %}
 
 {% block strona %}
-    <div class="card" style="width: 32rem;">
+    <div class="card" style="width: 32rem; float: left; margin-right: 1rem;">
         <div class="card-body">
             {%if nowy%}
                 <h5 class="card-title">Dodaj film </h5>
@@ -24,5 +24,42 @@
     </form>
         </div>
     </div>
+
+    <div class="card" style="width: 32rem; float: left; margin-right: 1rem;">
+        <div class="card-body">
+            <h5 class="card-title">Oceń Film</h5>
+
+
+            <form method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{form_ocena | bootstrap}}
+                <br><button type="submit"class="btn btn-primary">Oceń</button>
+            </form>
+        </div>
+    </div>
+    <div class="card" style="width: 32rem; float: left; margin-right: 1rem;">
+        <div class="card-body">
+            <h5 class="card-title">Dodaj Aktora</h5>
+
+
+            <form method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{form_aktor | bootstrap}}
+                <br><button type="submit"class="btn btn-primary">Dodaj</button>
+            </form>
+        </div>
+
+    </div>
+
+    {%for ocena in oceny%}
+        <h4>Gwiazdki: {{ocena.gwiazdki}}</h4>
+        <p>{{ocena.recenzja}}</p>
+    {%endfor%}
+    <h4>Obsada :</h4>
+    <ul>
+    {%for aktor in aktorzy%}
+        <li>{{aktor.imie}} {{aktor.nazwisko}}</li>
+    {%endfor%}
+    </ul>
     <a href="{% url 'wszystkie_filmy' %} ">Cofnij</a>
 {% endblock %}
